syntax = "proto3";

package lynx.protobuf.service;

option go_package = "base/conf;conf";

message TlsRoot {
  string rootCA = 1;
}